fix: network mode host

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ BEACONNODE=http://mynode:5052
 GRAFFITI="mr fox"
 # port is optional, used 5062 by default
 PORT=5062
+# set to non empty to enable host mode network
+LOCAL=
